feat(MagoFactory): implementar classe para criação dos arquetipos com as magias iniciais. feat(MagiaFactory): implementar dezenas de magias para teste. feat(Personagem): implementar atributoregerenação de mana, garantindo ao usuario mana a cada turno. feat(Pacotes): implementar mais pacotes de magia, Sombra, Cura e Natureza. feat(Efeitos): implementar mais efeitos no geral bem como CONGELADO. feat(InimigoFactory): implementar primeiro chefe do ATO, Durak, o Orc Superior, com magias especificas dele como FATIAR E CORTAR.